property-selector seams working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-md-2">
-    <property-selector></property-selector>
+    <property-selector [manufacturers]="manufacturers" [partTypes]="partTypes"></property-selector>
   </div>
 
   <div class="col-md-10">
-    <part-table></part-table>
+    <part-table [parts]="parts"></part-table>
   </div>
 </div>
