--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -1,37 +1,35 @@
 <div class="example-container mat-elevation-z8">
-  <mat-table #table [dataSource]="dataSource">
-
+  <mat-table #table [dataSource]="parts">
 
     <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> id</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> name</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="quantity">
-      <mat-header-cell *matHeaderCellDef> quantity</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.quantity}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="partType">
-      <mat-header-cell *matHeaderCellDef> partType</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.partType}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> PartType </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.partType.type}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="manufacturer">
-      <mat-header-cell *matHeaderCellDef> manufacturer</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.manufacturer}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> Manufacturer </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.manufacturer.name}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="tray">
-      <mat-header-cell *matHeaderCellDef> tray</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.tray}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> Tray </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.tray.label}} </mat-cell>
     </ng-container>
-
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
