--- a/src/app/property-selector/property-selector.component.html
+++ b/src/app/property-selector/property-selector.component.html
@@ -1,7 +1,24 @@
 <mat-tab-group>
   <mat-tab label="Manufacturer">
+    <mat-selection-list #manufacturerSelector (selectionChange)="ManufacturerSelected($event.source)">
+      <mat-list-option *ngFor="let manufacturer of manufacturers" [value]="manufacturer">
+        {{manufacturer.name}}
+      </mat-list-option>
+    </mat-selection-list>
   </mat-tab>
 
   <mat-tab label="PartType">
+    <mat-selection-list #partTypeSelector (selectionChange)="PartTypesSelected($event.source)">
+      <mat-list-option *ngFor="let partType of partTypes" [value]="partType">
+        {{partType.type}}
+      </mat-list-option>
+    </mat-selection-list>
   </mat-tab>
 </mat-tab-group>
+
+<p>
+  Manufacturers selected: {{manufacturerSelector.selectedOptions.selected.length}}
+</p>
+<p>
+  PartTypes selected: {{partTypeSelector.selectedOptions.selected.length}}
+</p>
