added basic filtering

--- a/src/app/property-selector/property-selector.component.html
+++ b/src/app/property-selector/property-selector.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group>
   <mat-tab label="Manufacturer">
-    <mat-selection-list #manufacturerSelector (selectionChange)="ManufacturerSelected($event.source)">
+    <mat-selection-list #manufacturerSelector (selectionChange)="getManufacturersSelected($event.source)">
       <mat-list-option *ngFor="let manufacturer of manufacturers" [value]="manufacturer">
         {{manufacturer.name}}
       </mat-list-option>
@@ -8,7 +8,7 @@
   </mat-tab>
 
   <mat-tab label="PartType">
-    <mat-selection-list #partTypeSelector (selectionChange)="PartTypesSelected($event.source)">
+    <mat-selection-list #partTypeSelector (selectionChange)="getPartTypesSelected($event.source)">
       <mat-list-option *ngFor="let partType of partTypes" [value]="partType">
         {{partType.type}}
       </mat-list-option>
