--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <div class="row">
   <div class="col-md-2">
-    <property-selector [manufacturers]="manufacturers" [partTypes]="partTypes"></property-selector>
+    <property-selector [manufacturers]="manufacturers"
+                       [partTypes]="partTypes"
+                       (selectedManufacturers)="updateSelectedManufacturers($event)"
+                       (selectedPartTypes)="updateSelectedPartTypes($event)">
+    </property-selector>
+
   </div>
 
   <div class="col-md-10">
-    <part-table *ngIf="parts.length >0" [parts]="parts"></part-table>
+    <part-table [parts]="partsEvent"></part-table>
   </div>
 </div>
