--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -1,3 +1,8 @@
+<input matInput type="text" placeholder="Filter"/>
+<button mat-button (click)="add()">
+  <mat-icon>add</mat-icon>
+</button>
+
 <div class="example-container mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource" matSort>
 
@@ -32,7 +37,7 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
       <mat-cell *matCellDef="let element">
         <button mat-icon-button color="primary" (click)="edit(element)">
           <mat-icon>edit</mat-icon>
