--- a/src/app/part-dialog/part-dialog.component.html
+++ b/src/app/part-dialog/part-dialog.component.html
@@ -1,39 +1,57 @@
 <mat-dialog-content>
+  <table>
 
-  <mat-form-field>
-    <input matInput [formControl]="nameControl" placeholder="Name">
-    <mat-hint *ngIf="nameControl.hasError('required')" class="mat-error">Name is required</mat-hint>
-  </mat-form-field>
+    <tr>
+      <td>
+        <mat-form-field>
+          <input matInput [formControl]="nameControl" placeholder="Name">
+          <mat-hint *ngIf="nameControl.hasError('required')" class="mat-error">Name is required</mat-hint>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field>
+          <input matInput [formControl]="quantityControl" placeholder="Quantity" type="number">
+          <mat-hint *ngIf="quantityControl.hasError('required')" class="mat-error">Quantity is required</mat-hint>
+        </mat-form-field>
+      </td>
+    </tr>
 
-  <mat-form-field>
-    <input matInput [formControl]="quantityControl" placeholder="Quantity" type="number">
-    <mat-hint *ngIf="quantityControl.hasError('required')" class="mat-error">Quantity is required</mat-hint>
-  </mat-form-field>
+    <tr>
+      <td>
+        <mat-form-field>
+          <mat-label>Part Type</mat-label>
+          <mat-select [formControl]="partTypeControl" placeholder="Select Part Type">
+            <mat-option *ngFor="let partType of partTypes" [value]="partType.id">{{ partType.type }}</mat-option>
+          </mat-select>
+          <mat-hint *ngIf="partTypeControl.hasError('required')" class="mat-error">Part Type is required</mat-hint>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field>
+          <mat-label>Manufacturer</mat-label>
+          <mat-select [formControl]="manufacturerControl" placeholder="Select Manufacturer">
+            <mat-option *ngFor="let manufacturer of manufacturers"
+                        [value]="manufacturer.id">{{ manufacturer.name }}</mat-option>
+          </mat-select>
+          <mat-hint *ngIf="manufacturerControl.hasError('required')" class="mat-error">Manufacturer is required
+          </mat-hint>
+        </mat-form-field>
+      </td>
 
-  <mat-form-field>
-    <mat-label>Part Type</mat-label>
-    <mat-select [formControl]="partTypeControl" placeholder="Select Part Type">
-      <mat-option *ngFor="let partType of partTypes" [value]="partType.id">{{ partType.type }}</mat-option>
-    </mat-select>
-    <mat-hint *ngIf="partTypeControl.hasError('required')" class="mat-error">Part Type is required</mat-hint>
-  </mat-form-field>
+    <tr>
+      <td>
+        <mat-form-field>
+          <mat-label>Tray</mat-label>
+          <mat-select [formControl]="trayControl" placeholder="Select Tray">
+            <mat-option *ngFor="let tray of trays" [value]="tray.id">{{ tray.label }}</mat-option>
+          </mat-select>
+          <mat-hint *ngIf="trayControl.hasError('required')" class="mat-error">Tray is required</mat-hint>
+        </mat-form-field>
+      </td>
+      <td></td>
+    </tr>
 
-  <mat-form-field>
-    <mat-label>Manufacturer</mat-label>
-    <mat-select [formControl]="manufacturerControl" placeholder="Select Manufacturer">
-      <mat-option *ngFor="let manufacturer of manufacturers" [value]="manufacturer.id">{{ manufacturer.name }}</mat-option>
-    </mat-select>
-    <mat-hint *ngIf="manufacturerControl.hasError('required')" class="mat-error">Manufacturer is required</mat-hint>
-  </mat-form-field>
-
-  <mat-form-field>
-    <mat-label>Tray</mat-label>
-    <mat-select [formControl]="trayControl" placeholder="Select Tray">
-      <mat-option *ngFor="let tray of trays" [value]="tray.id">{{ tray.label }}</mat-option>
-    </mat-select>
-    <mat-hint *ngIf="trayControl.hasError('required')" class="mat-error">Tray is required</mat-hint>
-  </mat-form-field>
-
+  </table>
 </mat-dialog-content>
 
 <mat-dialog-actions>
