added unit and value to part and done refactoring

--- a/src/app/dialogues/manufacturer-dialog/manufacturer-dialog.component.html
+++ b/src/app/dialogues/manufacturer-dialog/manufacturer-dialog.component.html
@@ -1,7 +1,6 @@
 <mat-dialog-content>
         <mat-form-field>
-          <input matInput [formControl]="nameControl" placeholder="Name">
-          <mat-hint *ngIf="nameControl.hasError('required')" class="mat-error">Name is required</mat-hint>
+          <input matInput [formControl]="nameControl" placeholder="name">
         </mat-form-field>
 </mat-dialog-content>
 
