--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -31,6 +31,11 @@
       <mat-cell *matCellDef="let element"> {{element.tray.name}} </mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="value">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> value</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{unitFormator(element)}} </mat-cell>
+    </ng-container>
+
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
         <button mat-icon-button (click)="add()">
