--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -36,6 +36,11 @@
       <mat-cell *matCellDef="let element"> {{unitFormator(element)}} </mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="footprint">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> footprint</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.footprint}} </mat-cell>
+    </ng-container>
+
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
         <button mat-icon-button (click)="add()">
