--- a/src/app/dialogues/part-dialog/part-dialog.component.html
+++ b/src/app/dialogues/part-dialog/part-dialog.component.html
@@ -60,7 +60,12 @@
         </mat-form-field>
       </td>
       <td>
-
+        <mat-form-field>
+          <mat-label>footprints</mat-label>
+          <mat-select [formControl]="footprintControl" placeholder="footprint">
+            <mat-option *ngFor="let unit of footprints" [value]="unit">{{ unit }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </td>
     </tr>
   </table>
