--- a/src/app/dialogues/part-dialog/part-dialog.component.html
+++ b/src/app/dialogues/part-dialog/part-dialog.component.html
@@ -39,6 +39,9 @@
         <mat-form-field>
           <mat-label>tray</mat-label>
           <mat-select [formControl]="trayControl" placeholder="tray">
+            <button mat-icon-button (click)="addTray()">
+              <mat-icon>add</mat-icon>
+            </button>
             <mat-option *ngFor="let tray of trays" [value]="tray.id">{{ tray.name }}</mat-option>
           </mat-select>
         </mat-form-field>
