--- a/src/app/property-selector/property-selector.component.html
+++ b/src/app/property-selector/property-selector.component.html
@@ -10,7 +10,7 @@
     </mat-selection-list>
   </mat-tab>
 
-  <mat-tab label="partType">
+  <mat-tab label="part type">
     <button mat-button (click)="addPartType()">
       <mat-icon>add</mat-icon>
     </button>
