--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
 <div class="row">
-
-  <div class="col-md-9">
-    <part-table [selectedManufacturers]="selectedManufacturers"
-                [selectedPartTypes]="selectedPartTypes"></part-table>
-  </div>
-  
-  <div class="col-md-3">
-    <property-selector (selectedManufacturers)="selectedManufacturers= $event"
-                       (selectedPartTypes)="selectedPartTypes= $event">
-    </property-selector>
-  </div>
+  <header>
+    <app-toolbar [title]="title"></app-toolbar>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
 </div>
