extracted css file

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,4 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-.mat-mdc-snack-bar-container {
-  --mat-mdc-snack-bar-button-color: #ffffff;
-  --mdc-snackbar-supporting-text-color: #ffffff;
-
-  &.app-notification-error {
-    --mdc-snackbar-container-color: #f23a2f;
-  }
-
-  &.app-notification-success {
-    --mdc-snackbar-container-color: #43a446;
-  }
-
-  &.app-notification-info {
-    --mdc-snackbar-container-color: #f6ca02;
-  }
-}
+@import "styles/notification";
