--- a/src/styles/ui/snackbar.scss
+++ b/src/styles/ui/snackbar.scss
@@ -1,16 +1,19 @@
+@import "../constants";
+
+
 .mat-mdc-snack-bar-container {
   --mat-mdc-snack-bar-button-color: #ffffff;
   --mdc-snackbar-supporting-text-color: #ffffff;
 
   &.app-notification-error {
-    --mdc-snackbar-container-color: #f23a2f;
+    --mdc-snackbar-container-color: var(--color-danger-500);
   }
 
   &.app-notification-success {
-    --mdc-snackbar-container-color: #43a446;
+    --mdc-snackbar-container-color: var(--color-success-500);
   }
 
   &.app-notification-info {
-    --mdc-snackbar-container-color: #f6ca02;
+    --mdc-snackbar-container-color: var(--color-info-500);
   }
 }
