--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,9 @@
 @import "constants";
 @import "ui/snackbar";
 @import "ui/toolbar";
+@import "ui/button";
+@import "ui/table";
+@import "ui/accordion";
 
 * {
   margin: 0;
