--- a/src/app/dialogues/part-dialog/part-dialog.component.html
+++ b/src/app/dialogues/part-dialog/part-dialog.component.html
@@ -73,8 +73,8 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button (click)="onCancelClick()">Cancel</button>
-  <button mat-button color="primary"
+  <button mat-button class="cancel-button" (click)="onCancelClick()">Cancel</button>
+  <button mat-button class="apply-button"
           [disabled]="nameControl.invalid ||
                       quantityControl.invalid ||
                       measurementUnitControl.invalid ||
