--- a/src/app/dialogues/partType-dialog/partType-dialog.component.html
+++ b/src/app/dialogues/partType-dialog/partType-dialog.component.html
@@ -5,8 +5,8 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button (click)="onCancelClick()">Cancel</button>
-  <button mat-button color="primary"
+  <button mat-button class="cancel-button" (click)="onCancelClick()">Cancel</button>
+  <button mat-button class="apply-button"
           [disabled]="typeControl.invalid"
           (click)="onSaveClick()">Save
   </button>
