--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -38,7 +38,7 @@
 
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
-        <button mat-icon-button (click)="add()">
+        <button mat-icon-button class="add-button" (click)="add()">
           <mat-icon>add</mat-icon>
         </button>
       </mat-header-cell>
