--- a/src/app/property-selector/property-selector.component.html
+++ b/src/app/property-selector/property-selector.component.html
@@ -7,7 +7,7 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <button mat-button (click)="addManufacturer()">
+    <button mat-button class="add-button" (click)="addManufacturer()">
       <mat-icon>add</mat-icon>
     </button>
     <mat-selection-list (selectionChange)="getManufacturersSelected($event.source)">
@@ -26,7 +26,7 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <button mat-button (click)="addPartType()">
+    <button mat-button class="add-button"  (click)="addPartType()">
       <mat-icon>add</mat-icon>
     </button>
     <mat-selection-list (selectionChange)="getPartTypesSelected($event.source)">
@@ -45,7 +45,7 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <button mat-button (click)="addShelf()">
+    <button mat-button class="add-button" (click)="addShelf()">
       <mat-icon>add</mat-icon>
     </button>
     <mat-accordion>
