--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar class="fixed-header">
-  <span>{{title}}</span>
+<mat-toolbar>
+  <img class="logo" src="assets/Logo.png">
 </mat-toolbar>
