added css for part table size

--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -1,5 +1,5 @@
 <div class="example-container mat-elevation-z8">
-  <mat-table [dataSource]="dataSource" matSort>
+  <mat-table class="part-table" [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header> name</mat-header-cell>
