--- a/src/app/dialogues/partType-dialog/partType-dialog.component.html
+++ b/src/app/dialogues/partType-dialog/partType-dialog.component.html
@@ -7,7 +7,7 @@
 <mat-dialog-actions>
   <button mat-button class="cancel-button" (click)="onCancelClick()">Cancel</button>
   <button mat-button class="apply-button"
-          [disabled]="typeControl.invalid"
+          [disabled]="allowSave()"
           (click)="onSaveClick()">Save
   </button>
 </mat-dialog-actions>
