added settings button

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,7 @@
 <mat-toolbar>
   <img class="logo" src="assets/Logo.png">
+  <span class="flexExpand"></span>
+  <a class="tool">
+    <mat-icon class="tool" svgIcon="gear-solid"></mat-icon>
+  </a>
 </mat-toolbar>
